ocaml/testsuite/tests/typing-layouts-err-msg/concrete_v1_check.compilers.reference
type t_void : void
Line 1, characters 0-23:
1 | (assert false : t_void);;
    ^^^^^^^^^^^^^^^^^^^^^^^
Error: Types of unnamed expressions must have layout value when using
       the toplevel, but this expression has layout "void".

